# conways_game_of_life

./: .gitignore  CMakeLists.txt  README.md  analisys.txt  callgrind.out.128250  gmon.out  profiler.sh
docs/: Project description
src/: CMakeLists.txt  chunks.cpp  main.cpp  vects.cpp  vects.hpp
